--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$CE1/oPnAqicDGh3bcWYc6OTZWXSza4KQqsyPjF5fo1TLPl9DHeTxG"
+# 	- password: java.lang.String = "$2a$05$.iKRbIaezuDghv66NXYBYOOkGn.8rJkGckCvMZiwmc90qU.K1YN9K"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$2fRr1zAVoHk7.6SNIpOFluKTyPxL909e64o7QtSR0qJZBMnLNltpO"
+# 	- password: java.lang.String = "$2a$05$ofI0siZtUcz/1.61.lEG0.tyo20vDV0fEJMccKpj/1EDMI4AnQG8G"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -423,7 +423,7 @@ entrepeneur1UserAccount=25
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepeneur1"
-# 	- password: java.lang.String = "$2a$05$AJv7thtPmi49F3GsSG4B/e4xULDh7Q69HFwu48DOmNjVzDfw.L2VS"
+# 	- password: java.lang.String = "$2a$05$pxYuM7NurQ47dtMYVLpAfeeFMDMI33rue/LF2PEkQSGdwJkUg0a4O"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Entrepeneur, surname=1, email=entrepeneur1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepeneur{id=26, version=0}, acme.framework.entities.Authenticated{id=27, version=0}]
@@ -472,7 +472,7 @@ entrepeneur2UserAccount=28
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepeneur2"
-# 	- password: java.lang.String = "$2a$05$8aqhh5iJPKwQTvd1fMPSou/vamtadvqj.l5X5Ywd5.34uj.0MHxRe"
+# 	- password: java.lang.String = "$2a$05$sTwO82JGujm9LqbTYSOGM.O6WiWJY4EwWKFkzdrpeZVCw.KW58vwK"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Acof, surname=Acof, email=andres@acofmelt.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepeneur{id=29, version=0}, acme.framework.entities.Authenticated{id=30, version=0}]
@@ -521,7 +521,7 @@ entrepeneur3UserAccount=31
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepeneur3"
-# 	- password: java.lang.String = "$2a$05$UZDseZAdFadDecZxvEMoZePIThNbPZtQbo/HdG0/5bVqau1trFHx6"
+# 	- password: java.lang.String = "$2a$05$2oZDm3VReFu2ae4g7UZtAOq.MRDK8PTxNallM2L5755Nk8J2tC532"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Lorenzo, surname=Aliaga, email=lorenzoaliaga@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepeneur{id=32, version=0}, acme.framework.entities.Authenticated{id=33, version=0}]
@@ -762,7 +762,7 @@ investor1UserAccount=45
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "investor1"
-# 	- password: java.lang.String = "$2a$05$Q91RBPsiX0ogFnsoSEWnyORTXBzpwMkQ2fMhx3D8MRpOSw4A8XqsC"
+# 	- password: java.lang.String = "$2a$05$LwxrIjJT4HWqkxTVFmnhfeIqyck.DpLwrnt5ISuuRsNyKtsN47DZa"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Investor, surname=1, email=investor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Investor{id=46, version=0}, acme.framework.entities.Authenticated{id=47, version=0}]
@@ -810,7 +810,7 @@ investor2UserAccount=48
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "investor2"
-# 	- password: java.lang.String = "$2a$05$RJJZNJocvopLkV6mVAts/ummH/df0JWX5uEhFBxMBRWe79.ITuOzS"
+# 	- password: java.lang.String = "$2a$05$wzv2PNNfY5lhH2Nss5WPYepv/1non5LCx4u82BMn82z49Rp9lj19y"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Investor, surname=2, email=investor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Investor{id=49, version=0}, acme.framework.entities.Authenticated{id=50, version=0}]
@@ -896,7 +896,7 @@ bookkeepers1UserAccount=53
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "bookkeeper1"
-# 	- password: java.lang.String = "$2a$05$SdyLbhdx6Q3weWm1ln7HS.h2d6LzX24wU/tSWpufe4jya79SsdX9i"
+# 	- password: java.lang.String = "$2a$05$6l4VViEj6TR2cCjRTCYwa.64qGLfFLVp1K9xG06t5WzHNK2fNxCBa"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Bookkeeper, surname=1, email=bookkeeper1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Bookkeeper{id=54, version=0}, acme.framework.entities.Authenticated{id=55, version=0}]
@@ -943,7 +943,7 @@ bookkeepers2UserAccount=56
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "bookkeeper2"
-# 	- password: java.lang.String = "$2a$05$JyuwglRSqAHFdcivIE6j6.Br10LclWcX7Z36A6Bbbx5lIUQ0cKHoC"
+# 	- password: java.lang.String = "$2a$05$6AvztnkE8JzVMm0H7.euzO17cgk.DYjExuYx.IMm723M3M4FpSZtC"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Bookkeeper, surname=2, email=bookkeeper2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Bookkeeper{id=57, version=0}, acme.framework.entities.Authenticated{id=58, version=0}]
@@ -1115,7 +1115,7 @@ patron1UserAccount=67
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "patron1"
-# 	- password: java.lang.String = "$2a$05$PoMs5AYmOuGNpBcEDa/k4OQyYm0qiRix7q9hV3WFLxXlZH2LWMT5m"
+# 	- password: java.lang.String = "$2a$05$d9wy56wMSSAQVKa1c4MU9uKVszjnHigWrTry.Ztpun.gDG3o6pndy"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Patron, surname=1, email=patron1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Patron{id=68, version=0}, acme.framework.entities.Authenticated{id=69, version=0}]
@@ -1166,7 +1166,7 @@ patron2UserAccount=70
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "patron2"
-# 	- password: java.lang.String = "$2a$05$nV4IonEbXFBO3lBBOTFnlunhgl.RMloUjiquhvO8Yxf2tEJ.5OJWe"
+# 	- password: java.lang.String = "$2a$05$FANNaQ4TVVNa8jvunwsBruUwf6zpRoovn/74jIGX.B8yBRSbuYXai"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Patron, surname=2, email=patron2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Patron{id=71, version=0}, acme.framework.entities.Authenticated{id=72, version=0}]
