--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$.iKRbIaezuDghv66NXYBYOOkGn.8rJkGckCvMZiwmc90qU.K1YN9K"
+# 	- password: java.lang.String = "$2a$05$8EZrbx69kWNbDH//HDnnYesKXw7EideWqVbwGrvM4rS2dSoG1PoG6"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$ofI0siZtUcz/1.61.lEG0.tyo20vDV0fEJMccKpj/1EDMI4AnQG8G"
+# 	- password: java.lang.String = "$2a$05$PpN2Gnfpph6Fh/sRBhVKcOfIhq9VhkXcH5w1z09DhnDD9mfJdWXnK"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -222,7 +222,7 @@ inquirie01=14
 # 	- body: java.lang.String = "Requesting assist."
 # 	- minMoney: acme.framework.datatypes.Money = <<€ 2000.00>>
 # 	- maxMoney: acme.framework.datatypes.Money = <<€ 2000.00>>
-# 	- contactEmail: java.lang.String = "inquire@inquirie.com"
+# 	- contactEmail: acme.datatypes.Email =  <inquire@inquirie.com>
 
 inquirie02=15
 
@@ -240,7 +240,7 @@ inquirie02=15
 # 	- body: java.lang.String = "Requesting assist 2."
 # 	- minMoney: acme.framework.datatypes.Money = <<€ 2000.00>>
 # 	- maxMoney: acme.framework.datatypes.Money = <<€ 5000.00>>
-# 	- contactEmail: java.lang.String = "inquire@inquirie.com"
+# 	- contactEmail: acme.datatypes.Email =  <inquire@inquirie.com>
 
 overture01=16
 
@@ -258,7 +258,7 @@ overture01=16
 # 	- body: java.lang.String = "Requesting assist."
 # 	- minMoney: acme.framework.datatypes.Money = <<€ 2000.00>>
 # 	- maxMoney: acme.framework.datatypes.Money = <<€ 3000.00>>
-# 	- contactEmail: java.lang.String = "overture@overture.com"
+# 	- contactEmail: acme.datatypes.Email =  <overture@overture.com>
 
 overture02=17
 
@@ -276,7 +276,7 @@ overture02=17
 # 	- body: java.lang.String = "Requesting assist 2."
 # 	- minMoney: acme.framework.datatypes.Money = <<€ 2000.00>>
 # 	- maxMoney: acme.framework.datatypes.Money = <<€ 4000.00>>
-# 	- contactEmail: java.lang.String = "overture@overture.com"
+# 	- contactEmail: acme.datatypes.Email =  <overture@overture.com>
 
 technology01=18
 
@@ -293,7 +293,7 @@ technology01=18
 # 	- inventorName: java.lang.String = "Bill Gates"
 # 	- description: java.lang.String = "Windows Operating System"
 # 	- website: java.lang.String = "https://www.microsoft.com/es-es/windows"
-# 	- email: java.lang.String = "microsoft@hotmail.com"
+# 	- email: acme.datatypes.Email =  <microsoft@hotmail.com>
 # 	- sourceType: java.lang.String = "Closed-Source"
 # 	- stars: java.lang.Integer = null
 
@@ -312,7 +312,7 @@ technology02=19
 # 	- inventorName: java.lang.String = "Richard Stallman"
 # 	- description: java.lang.String = "Ubuntu Operating System"
 # 	- website: java.lang.String = "https://ubuntu.com/"
-# 	- email: java.lang.String = "ubuntu@ubuntu.com"
+# 	- email: acme.datatypes.Email =  <ubuntu@ubuntu.com>
 # 	- sourceType: java.lang.String = "Open-Source"
 # 	- stars: java.lang.Integer = 4
 
@@ -331,7 +331,7 @@ technology03=20
 # 	- inventorName: java.lang.String = "Alvaro Vaquero"
 # 	- description: java.lang.String = "Food Shop Automatic System"
 # 	- website: java.lang.String = "https://vaquero.com/"
-# 	- email: java.lang.String = "av@vaquero.com"
+# 	- email: acme.datatypes.Email =  <av@vaquero.com>
 # 	- sourceType: java.lang.String = "Open-Source"
 # 	- stars: java.lang.Integer = -2
 
@@ -350,7 +350,7 @@ tool01=21
 # 	- inventorName: java.lang.String = "Bill Gates"
 # 	- description: java.lang.String = "Windows Operating System"
 # 	- website: java.lang.String = "https://www.microsoft.com/es-es/windows"
-# 	- email: java.lang.String = "microsoft@hotmail.com"
+# 	- email: acme.datatypes.Email =  <microsoft@hotmail.com>
 # 	- sourceType: java.lang.String = "Closed-Source"
 # 	- stars: java.lang.Integer = null
 
@@ -369,7 +369,7 @@ tool02=22
 # 	- inventorName: java.lang.String = "Richard Stallman"
 # 	- description: java.lang.String = "Ubuntu Operating System"
 # 	- website: java.lang.String = "https://ubuntu.com/"
-# 	- email: java.lang.String = "ubuntu@ubuntu.com"
+# 	- email: acme.datatypes.Email =  <ubuntu@ubuntu.com>
 # 	- sourceType: java.lang.String = "Open-Source"
 # 	- stars: java.lang.Integer = 4
 
@@ -388,7 +388,7 @@ tool03=23
 # 	- inventorName: java.lang.String = "Alvaro Vaquero"
 # 	- description: java.lang.String = "Food Shop Automatic System"
 # 	- website: java.lang.String = "https://vaquero.com/"
-# 	- email: java.lang.String = "av@vaquero.com"
+# 	- email: acme.datatypes.Email =  <av@vaquero.com>
 # 	- sourceType: java.lang.String = "Closed-Source"
 # 	- stars: java.lang.Integer = -2
 
@@ -423,7 +423,7 @@ entrepeneur1UserAccount=25
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepeneur1"
-# 	- password: java.lang.String = "$2a$05$pxYuM7NurQ47dtMYVLpAfeeFMDMI33rue/LF2PEkQSGdwJkUg0a4O"
+# 	- password: java.lang.String = "$2a$05$L9QwqA0MdWjMXWs4o5ISVeGeumIDIb37y2g8ncpI1.Y9QQ7xSFlKK"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Entrepeneur, surname=1, email=entrepeneur1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepeneur{id=26, version=0}, acme.framework.entities.Authenticated{id=27, version=0}]
@@ -472,7 +472,7 @@ entrepeneur2UserAccount=28
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepeneur2"
-# 	- password: java.lang.String = "$2a$05$sTwO82JGujm9LqbTYSOGM.O6WiWJY4EwWKFkzdrpeZVCw.KW58vwK"
+# 	- password: java.lang.String = "$2a$05$/8mTAD.tBAtznfi1XlgxXuj4AV.Oj6zRw5udFOcxhQVmalqWVE1Cy"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Acof, surname=Acof, email=andres@acofmelt.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepeneur{id=29, version=0}, acme.framework.entities.Authenticated{id=30, version=0}]
@@ -521,7 +521,7 @@ entrepeneur3UserAccount=31
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepeneur3"
-# 	- password: java.lang.String = "$2a$05$2oZDm3VReFu2ae4g7UZtAOq.MRDK8PTxNallM2L5755Nk8J2tC532"
+# 	- password: java.lang.String = "$2a$05$uMj53zZcw7CM2ZkLO0LTJOnBGHN03hJiETkagP2jGlaZzQY8EItxy"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Lorenzo, surname=Aliaga, email=lorenzoaliaga@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepeneur{id=32, version=0}, acme.framework.entities.Authenticated{id=33, version=0}]
@@ -762,7 +762,7 @@ investor1UserAccount=45
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "investor1"
-# 	- password: java.lang.String = "$2a$05$LwxrIjJT4HWqkxTVFmnhfeIqyck.DpLwrnt5ISuuRsNyKtsN47DZa"
+# 	- password: java.lang.String = "$2a$05$jYRSImMNPZI34TjLdDEpF.8wYTMFQACJd/F1sl3nt2VQJi/SCpruG"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Investor, surname=1, email=investor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Investor{id=46, version=0}, acme.framework.entities.Authenticated{id=47, version=0}]
@@ -810,7 +810,7 @@ investor2UserAccount=48
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "investor2"
-# 	- password: java.lang.String = "$2a$05$wzv2PNNfY5lhH2Nss5WPYepv/1non5LCx4u82BMn82z49Rp9lj19y"
+# 	- password: java.lang.String = "$2a$05$N6yoclctK/Wetndf7g/pA.rTDw.UbWkgU/R2/b8FavmNwjuySg8c6"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Investor, surname=2, email=investor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Investor{id=49, version=0}, acme.framework.entities.Authenticated{id=50, version=0}]
@@ -896,7 +896,7 @@ bookkeepers1UserAccount=53
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "bookkeeper1"
-# 	- password: java.lang.String = "$2a$05$6l4VViEj6TR2cCjRTCYwa.64qGLfFLVp1K9xG06t5WzHNK2fNxCBa"
+# 	- password: java.lang.String = "$2a$05$NlwncYvEi0r3icP.l6cfrunbtgs2rfa2t3ADbvKwYl8N4u3V/M9dW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Bookkeeper, surname=1, email=bookkeeper1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Bookkeeper{id=54, version=0}, acme.framework.entities.Authenticated{id=55, version=0}]
@@ -943,7 +943,7 @@ bookkeepers2UserAccount=56
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "bookkeeper2"
-# 	- password: java.lang.String = "$2a$05$6AvztnkE8JzVMm0H7.euzO17cgk.DYjExuYx.IMm723M3M4FpSZtC"
+# 	- password: java.lang.String = "$2a$05$E/uHIGYWk/DSRQgrEE1ieO5t5op.VrNqsYOxR7ThtIMBR12d8cBge"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Bookkeeper, surname=2, email=bookkeeper2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Bookkeeper{id=57, version=0}, acme.framework.entities.Authenticated{id=58, version=0}]
@@ -1115,7 +1115,7 @@ patron1UserAccount=67
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "patron1"
-# 	- password: java.lang.String = "$2a$05$d9wy56wMSSAQVKa1c4MU9uKVszjnHigWrTry.Ztpun.gDG3o6pndy"
+# 	- password: java.lang.String = "$2a$05$3LiR/FtQKhyq8nd4c2Cgiud9bZadV.5lSacBSn.oLcaUMdfDxbbtm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Patron, surname=1, email=patron1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Patron{id=68, version=0}, acme.framework.entities.Authenticated{id=69, version=0}]
@@ -1166,7 +1166,7 @@ patron2UserAccount=70
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "patron2"
-# 	- password: java.lang.String = "$2a$05$FANNaQ4TVVNa8jvunwsBruUwf6zpRoovn/74jIGX.B8yBRSbuYXai"
+# 	- password: java.lang.String = "$2a$05$Bt33Qa0IRLCjaBBbeI2HquBB6n1B1Uk.ujb49YWK88KOfoOCXxCQm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Patron, surname=2, email=patron2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Patron{id=71, version=0}, acme.framework.entities.Authenticated{id=72, version=0}]
