--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$8EZrbx69kWNbDH//HDnnYesKXw7EideWqVbwGrvM4rS2dSoG1PoG6"
+# 	- password: java.lang.String = "$2a$05$T5V8gBogBusCF2znho/rtOBvWw.tm.UiDllYIcAUmUaO.8QoDcDtq"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$PpN2Gnfpph6Fh/sRBhVKcOfIhq9VhkXcH5w1z09DhnDD9mfJdWXnK"
+# 	- password: java.lang.String = "$2a$05$nKFN2kl1J.1CHgcL7GK1XeiOg9VCvG2NFfM..BmxWRJPNBOH5uZS2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -423,7 +423,7 @@ entrepeneur1UserAccount=25
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepeneur1"
-# 	- password: java.lang.String = "$2a$05$L9QwqA0MdWjMXWs4o5ISVeGeumIDIb37y2g8ncpI1.Y9QQ7xSFlKK"
+# 	- password: java.lang.String = "$2a$05$xf8LdumQPMjGQzhbLyJiBOlxlO1iWbi9r6Ouygl8m.D5ix0yknoKK"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Entrepeneur, surname=1, email=entrepeneur1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepeneur{id=26, version=0}, acme.framework.entities.Authenticated{id=27, version=0}]
@@ -472,7 +472,7 @@ entrepeneur2UserAccount=28
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepeneur2"
-# 	- password: java.lang.String = "$2a$05$/8mTAD.tBAtznfi1XlgxXuj4AV.Oj6zRw5udFOcxhQVmalqWVE1Cy"
+# 	- password: java.lang.String = "$2a$05$WReBKV3sZQaO/tfeJjoleOeXuXe9G.qceyDpVNDJDGIpHZ0YIGq0O"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Acof, surname=Acof, email=andres@acofmelt.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepeneur{id=29, version=0}, acme.framework.entities.Authenticated{id=30, version=0}]
@@ -521,7 +521,7 @@ entrepeneur3UserAccount=31
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepeneur3"
-# 	- password: java.lang.String = "$2a$05$uMj53zZcw7CM2ZkLO0LTJOnBGHN03hJiETkagP2jGlaZzQY8EItxy"
+# 	- password: java.lang.String = "$2a$05$ZQb4bizDQpqunHdwAlgRrOrOMV/4Qp7xfISEUuS12tPKLdlSXL/Ka"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Lorenzo, surname=Aliaga, email=lorenzoaliaga@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepeneur{id=32, version=0}, acme.framework.entities.Authenticated{id=33, version=0}]
@@ -762,7 +762,7 @@ investor1UserAccount=45
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "investor1"
-# 	- password: java.lang.String = "$2a$05$jYRSImMNPZI34TjLdDEpF.8wYTMFQACJd/F1sl3nt2VQJi/SCpruG"
+# 	- password: java.lang.String = "$2a$05$4N6MakisKcrltL58ZclGs.lG26XYFEhnEMLiA68kiBoMgyku2IA2y"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Investor, surname=1, email=investor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Investor{id=46, version=0}, acme.framework.entities.Authenticated{id=47, version=0}]
@@ -810,7 +810,7 @@ investor2UserAccount=48
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "investor2"
-# 	- password: java.lang.String = "$2a$05$N6yoclctK/Wetndf7g/pA.rTDw.UbWkgU/R2/b8FavmNwjuySg8c6"
+# 	- password: java.lang.String = "$2a$05$4/KXOaQZr7Yc2sq6wvFsdeuJWhlzaVppusRpcLQy1.E0yS1UA6OqO"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Investor, surname=2, email=investor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Investor{id=49, version=0}, acme.framework.entities.Authenticated{id=50, version=0}]
@@ -896,7 +896,7 @@ bookkeepers1UserAccount=53
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "bookkeeper1"
-# 	- password: java.lang.String = "$2a$05$NlwncYvEi0r3icP.l6cfrunbtgs2rfa2t3ADbvKwYl8N4u3V/M9dW"
+# 	- password: java.lang.String = "$2a$05$nKU67qfhVdASIaC/0An8M.xNx1OjiHf3HViWkuiuW2QiaFfzqJ6ja"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Bookkeeper, surname=1, email=bookkeeper1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Bookkeeper{id=54, version=0}, acme.framework.entities.Authenticated{id=55, version=0}]
@@ -943,7 +943,7 @@ bookkeepers2UserAccount=56
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "bookkeeper2"
-# 	- password: java.lang.String = "$2a$05$E/uHIGYWk/DSRQgrEE1ieO5t5op.VrNqsYOxR7ThtIMBR12d8cBge"
+# 	- password: java.lang.String = "$2a$05$wrvgK58OFskDqTKStPP1EeZKTWyUr3tkkfzHDKeoz7OSpIQF3gk9."
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Bookkeeper, surname=2, email=bookkeeper2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Bookkeeper{id=57, version=0}, acme.framework.entities.Authenticated{id=58, version=0}]
@@ -1115,7 +1115,7 @@ patron1UserAccount=67
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "patron1"
-# 	- password: java.lang.String = "$2a$05$3LiR/FtQKhyq8nd4c2Cgiud9bZadV.5lSacBSn.oLcaUMdfDxbbtm"
+# 	- password: java.lang.String = "$2a$05$t.BOsOcKG.X4B/V4B4j7Fe20N62cvJPiw/kixdQi59a7CxLbP6TGq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Patron, surname=1, email=patron1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Patron{id=68, version=0}, acme.framework.entities.Authenticated{id=69, version=0}]
@@ -1166,7 +1166,7 @@ patron2UserAccount=70
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "patron2"
-# 	- password: java.lang.String = "$2a$05$Bt33Qa0IRLCjaBBbeI2HquBB6n1B1Uk.ujb49YWK88KOfoOCXxCQm"
+# 	- password: java.lang.String = "$2a$05$lWtFqIAsfspvZZgbDgglpOxWwVQR5KQ3O./USkuSC5p9vCxQUUmu2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Patron, surname=2, email=patron2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Patron{id=71, version=0}, acme.framework.entities.Authenticated{id=72, version=0}]
