--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$bVjxyrzhn3b2ukGFJ0.vYurYvuA3OA3vL08z.KDVcA3RtScPW0Md."
+# 	- password: java.lang.String = "$2a$05$e9Mj/vIVkjGqmGlJrDb9YeNkW35u90R77i1ZUssV1ZdCfDT2Vw8Ga"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$gfHaF6mYxz1UPtAFpQyNKOlKh23H.LMDPJzCuioTPV2Oqj.dlky3u"
+# 	- password: java.lang.String = "$2a$05$X0OrU5QUJuKZY5Ovr2KYUOT2WC8slPyyTa7bpQntkijspzgTDGkvW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -423,7 +423,7 @@ entrepeneur1UserAccount=25
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepeneur1"
-# 	- password: java.lang.String = "$2a$05$.UMv4JKJyKuzwfvLn.YbGOOG85/VXVMfbmTCGgzAHb3B1x49FfmIu"
+# 	- password: java.lang.String = "$2a$05$.tuSi1DFbfxLikZW4hH4LOEMXtf1yc2OQchz.lgZqbDaKN1PrIGnm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Entrepeneur, surname=1, email=entrepeneur1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepeneur{id=26, version=0}, acme.framework.entities.Authenticated{id=27, version=0}]
@@ -472,7 +472,7 @@ entrepeneur2UserAccount=28
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepeneur2"
-# 	- password: java.lang.String = "$2a$05$LdUCrKeY7vPH2FMxWfS9DOsVbHOA.J4yVPd.1YDKWo5l7NXaPE72G"
+# 	- password: java.lang.String = "$2a$05$Ph9goyZQGwQuCaK68dQHnOqQ0Y6Wl2QAF9.4fKM0aTaqdi4yTA/Ge"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Acof, surname=Acof, email=andres@acofmelt.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepeneur{id=29, version=0}, acme.framework.entities.Authenticated{id=30, version=0}]
@@ -521,7 +521,7 @@ entrepeneur3UserAccount=31
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepeneur3"
-# 	- password: java.lang.String = "$2a$05$wU/FvXWmHrYfa1kiUtXvi.1sR8YticYFKWj4rWZuiALD1RU8ec3Ga"
+# 	- password: java.lang.String = "$2a$05$dmBPz2c3wylOkOiiih39Jerddwe4oGFSYl1rWSIYLsb1DSA.TFIpq"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Lorenzo, surname=Aliaga, email=lorenzoaliaga@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepeneur{id=32, version=0}, acme.framework.entities.Authenticated{id=33, version=0}]
@@ -762,7 +762,7 @@ investor1UserAccount=45
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "investor1"
-# 	- password: java.lang.String = "$2a$05$B8JAyW/ClmEdON8qMNLKAur.kL6VgyYESA2UQJQoRfCDvzzAXOwTK"
+# 	- password: java.lang.String = "$2a$05$imz/1EOpBD/f2xgmMwm0RusziH5kHlIr9/JPbal4rfR/WU.t2zEfW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Investor, surname=1, email=investor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Investor{id=46, version=0}, acme.framework.entities.Authenticated{id=47, version=0}]
@@ -810,7 +810,7 @@ investor2UserAccount=48
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "investor2"
-# 	- password: java.lang.String = "$2a$05$FiQsHGbzRpjr/spjStmgNuwsyE5lAle/7qNA5OuGsySYqxL1bwz7W"
+# 	- password: java.lang.String = "$2a$05$H0ZH3QkUcOwGTKHVbdFA7eB8TNS6LxI3PXXJAJ4vskM5e7p91kLxm"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Investor, surname=2, email=investor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Investor{id=49, version=0}, acme.framework.entities.Authenticated{id=50, version=0}]
@@ -896,7 +896,7 @@ bookkeepers1UserAccount=53
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "bookkeeper1"
-# 	- password: java.lang.String = "$2a$05$p.58/QjHlXrUR3PJlx4NMulPxwbKer4qG8iIV80OLE/QhKPTysUme"
+# 	- password: java.lang.String = "$2a$05$Qr3E2H1SLIjG4qlU8YEFtO0uBDEWnB8fVTFDLa3ttJ7M7Ock1MY/u"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Bookkeeper, surname=1, email=bookkeeper1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Bookkeeper{id=54, version=0}, acme.framework.entities.Authenticated{id=55, version=0}]
@@ -943,7 +943,7 @@ bookkeepers2UserAccount=56
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "bookkeeper2"
-# 	- password: java.lang.String = "$2a$05$2MQc2go57IpFxz3m1nWPe.ZRZF6L9x6jJlj3NrmAM9Zxbo2SG7A2y"
+# 	- password: java.lang.String = "$2a$05$DCXNdvcxxUCgojIvplJ4Gu9XV2F4vH5jZanOoZxtPyPIxOYkdI332"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Bookkeeper, surname=2, email=bookkeeper2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Bookkeeper{id=57, version=0}, acme.framework.entities.Authenticated{id=58, version=0}]
@@ -1115,7 +1115,7 @@ patron1UserAccount=67
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "patron1"
-# 	- password: java.lang.String = "$2a$05$TXmWTbx7dXieMbcqaT7pv.Pjj2sPIvF/1BLBNyRlQtrK6uR.eAo7G"
+# 	- password: java.lang.String = "$2a$05$6IKq7b.3LjeE5jyOifVUt.WCM.vjoS.YWPx8Kh6afEGoi14pHR7ta"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Patron, surname=1, email=patron1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Patron{id=68, version=0}, acme.framework.entities.Authenticated{id=69, version=0}]
@@ -1166,7 +1166,7 @@ patron2UserAccount=70
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "patron2"
-# 	- password: java.lang.String = "$2a$05$6HmcDIQ32YOo61AkBatR3exfX/jDt8c83qyZdn6NKLb8TGJftIGai"
+# 	- password: java.lang.String = "$2a$05$Oy33BgZ3w9MTykmvgwmQlu1LQ5YjgRz/M23sw/TxNlgNRn/NrK5FO"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Patron, surname=2, email=patron2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Patron{id=71, version=0}, acme.framework.entities.Authenticated{id=72, version=0}]
