--- a/src/main/resources/application-deployment.properties
+++ b/src/main/resources/application-deployment.properties
@@ -10,9 +10,9 @@
 
 # User-defined properties.  Please, change them to adapt the starter project to your needs. 
 
-spring.datasource.url							= jdbc:mysql://bmyymfox1qsveikfeonr-mysql.services.clever-cloud.com:3306/bmyymfox1qsveikfeonr
-spring.datasource.username						= u5pmuuqin5ydbxji
-spring.datasource.password						= 7216Gkj9EzBzkbLYG9ur
+spring.datasource.url							= jdbc:mysql://bp5y5qte9hagjw8dmm9a-mysql.services.clever-cloud.com:3306/bp5y5qte9hagjw8dmm9a
+spring.datasource.username						= ufeesue9g5izvdty
+spring.datasource.password						= YEhHleqq2bM8IeHlmIMX
 
 spring.jpa.hibernate.show-sql					= true
 spring.jpa.hibernate.format-sql					= true
