--- a/src/main/population/entity-map.properties
+++ b/src/main/population/entity-map.properties
@@ -12,7 +12,7 @@ anonymousUserAccount=1
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "anonymous"
-# 	- password: java.lang.String = "$2a$05$2gzpeE4sxGHtwwOSHylIwefwL5L6er9UCf1sDwmsX9aBK13MrwSEa"
+# 	- password: java.lang.String = "$2a$05$qpgKeA0zcemxN1tzDyNTQerimtjoWDsAmBtFSsqvC9obWWX/SVjCC"
 # 	- enabled: boolean = false
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=John, surname=Doe, email=john.doe@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Anonymous{id=2, version=0}]
@@ -43,7 +43,7 @@ administratorUserAccount=3
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "administrator"
-# 	- password: java.lang.String = "$2a$05$8F66I7U2PtisAWSPC6jSpenHVkZKoV8Q.piciRV5RB49eLwD6NBBO"
+# 	- password: java.lang.String = "$2a$05$Rwz20vNyHdJlDwlifG7VVupRKBPQEMYRd7Dju56Oo55n/1gw8uE1C"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Administrator, surname=Acme.com, email=administrator@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.framework.entities.Administrator{id=4, version=0}, acme.framework.entities.Authenticated{id=5, version=0}]
@@ -423,7 +423,7 @@ entrepeneur1UserAccount=25
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepeneur1"
-# 	- password: java.lang.String = "$2a$05$qJY24PW4XzvXTCm8akAjQ.ca8.vxIIcVLmJi77mocvkT1XjyUjyje"
+# 	- password: java.lang.String = "$2a$05$7DmYLZpeQddyfGVIxcRtn.iG5mHAfk1Opqft12UcDJnewpaGlFQg2"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Entrepeneur, surname=1, email=entrepeneur1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepeneur{id=26, version=0}, acme.framework.entities.Authenticated{id=27, version=0}]
@@ -472,7 +472,7 @@ entrepeneur2UserAccount=28
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepeneur2"
-# 	- password: java.lang.String = "$2a$05$RyzLqwv8UyQZfnUfZrpVWeuJJgPpr0D1/wx7nQbL43W16aMwozfDy"
+# 	- password: java.lang.String = "$2a$05$LUOHB3DUbhbfSrairfxOJe8l4H7GXNc.8QuVqkZo5mmVNDuWRyQuW"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Acof, surname=Acof, email=andres@acofmelt.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepeneur{id=29, version=0}, acme.framework.entities.Authenticated{id=30, version=0}]
@@ -521,7 +521,7 @@ entrepeneur3UserAccount=31
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "entrepeneur3"
-# 	- password: java.lang.String = "$2a$05$D460BHVSSm.h1RHSY4sZ..cnZxrAv966SiOdUqvQnxb.fMDN9nMnC"
+# 	- password: java.lang.String = "$2a$05$NTpywqc355S8cM8xAcdrWuS6dhmJ88PYwfxUIxymwRHsBx5WbZr.u"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Lorenzo, surname=Aliaga, email=lorenzoaliaga@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Entrepeneur{id=32, version=0}, acme.framework.entities.Authenticated{id=33, version=0}]
@@ -762,7 +762,7 @@ investor1UserAccount=45
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "investor1"
-# 	- password: java.lang.String = "$2a$05$64k8otPwVZVfud3HYAPUju6bGxRySELeZcQpjfsQwyWvSzzxX/hUe"
+# 	- password: java.lang.String = "$2a$05$FInwSnW/si5HhCoD62i2xeX194QJwUFCGDiEpWYvoKd1KM/MybVMy"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Investor, surname=1, email=investor1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Investor{id=46, version=0}, acme.framework.entities.Authenticated{id=47, version=0}]
@@ -810,7 +810,7 @@ investor2UserAccount=48
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "investor2"
-# 	- password: java.lang.String = "$2a$05$Fq8GyN7OUVDBLJsRXuxcTuY8sv6T/osOchHjI0YrEVfNp3onaebyG"
+# 	- password: java.lang.String = "$2a$05$mZ.5/lmIfHCWYNCQEeBnf.ruZldPUZI6Wn9.1BqHmKaB0K1qpoxKa"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Investor, surname=2, email=investor2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Investor{id=49, version=0}, acme.framework.entities.Authenticated{id=50, version=0}]
@@ -896,7 +896,7 @@ bookkeepers1UserAccount=53
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "bookkeeper1"
-# 	- password: java.lang.String = "$2a$05$mVqHYtDFS3TqbMQ4X1JC..o9HnmtyjGFz1tFf3A5KTkmwm.gdlxcW"
+# 	- password: java.lang.String = "$2a$05$KaioF3eWYLySU2HkjMOy8.3Srscg5eKt6mrJaG0wO09rQEqqqKDVe"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Bookkeeper, surname=1, email=bookkeeper1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Bookkeeper{id=54, version=0}, acme.framework.entities.Authenticated{id=55, version=0}]
@@ -943,7 +943,7 @@ bookkeepers2UserAccount=56
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "bookkeeper2"
-# 	- password: java.lang.String = "$2a$05$BKqvAb589j0iOdP4y8MWgOL05ILxNUHpqA4LwVigylkZZ.JbXgGfS"
+# 	- password: java.lang.String = "$2a$05$EOGoJrVJGOSENI78WQL8FeqI3nlteMUdra2KepqJ7swJwObhyOdty"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Bookkeeper, surname=2, email=bookkeeper2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Bookkeeper{id=57, version=0}, acme.framework.entities.Authenticated{id=58, version=0}]
@@ -1115,7 +1115,7 @@ patron1UserAccount=67
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "patron1"
-# 	- password: java.lang.String = "$2a$05$WAIov/ZXhl.zsqucI7D/cuk77RXMw7.jm1nVlvogvtfOZBd8DHLQO"
+# 	- password: java.lang.String = "$2a$05$7sY0YZYJXa9Rq9XsaNszMO55JmGcu0sJZDeCu.unIFWX3nISKesuu"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Patron, surname=1, email=patron1@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Patron{id=68, version=0}, acme.framework.entities.Authenticated{id=69, version=0}]
@@ -1166,7 +1166,7 @@ patron2UserAccount=70
 # 	from acme.framework.entities.UserAccount:
 # 	- serialVersionUID: long = 1
 # 	- username: java.lang.String = "patron2"
-# 	- password: java.lang.String = "$2a$05$sGxqfRuO4T5EylI7t05.duzkhCtUQf6M.Jgm5Nu0oBRqqjH1T58dy"
+# 	- password: java.lang.String = "$2a$05$LGJpU.fhdd3XpKU/MiaKROU9ARDBbmunLzZn90nMsYavYRVIzOp86"
 # 	- enabled: boolean = true
 # 	- identity: acme.datatypes.UserIdentity = UserIdentity(name=Patron, surname=2, email=patron2@acme.com)
 # 	- roles: java.util.Collection<acme.framework.entities.UserRole> = [acme.entities.roles.Patron{id=71, version=0}, acme.framework.entities.Authenticated{id=72, version=0}]
